# factory_manim

./: .env  .gitignore  config.json  db_config.json  pyproject.toml  pytest.ini  readme.md
data/: sample.json
input/manim_files/script_data/script_seq1/: script_seq1.py  script_seq1.txt
input/manim_files/script_data/script_seq2/: script_seq2.py
input/manim_files/script_data/script_seq3/: script_seq3.py  script_seq3.txt
input/parsed_file/: parsed.json
media/videos/script_seq1/480p15/partial_movie_files/ScriptSeq1/: partial_movie_file_list.txt
media/videos/script_seq2/480p15/partial_movie_files/ScriptSeq2/: partial_movie_file_list.txt
media/videos/script_seq3/480p15/partial_movie_files/ScriptSeq3/: partial_movie_file_list.txt
output/: result.json  result_csv.json  result_db.json
src/: config_loader.py  generate_file.py  input_handler.py  main.py  output_handler.py  parser.py
src/factories/: input_handler_factory.py  output_handler_factory.py  parser_factory.py
tests/: test_input_handler.py  test_output_handler.py  test_parser.py  test_pipeline_e2e.py
